# Progetto_Planning-Navigation

./: .gitignore  Dockerfile  README.md
src/pkg/progetto_planning/: CMakeLists.txt  package.xml  plugins.xml
src/pkg/progetto_planning/behavior_tree/: lunar_mission.xml
src/pkg/progetto_planning/include/progetto_planning/: explore_until_found.hpp  go_to_light_zone.hpp  illumination_layer.hpp  navigate_to_goal.hpp  take_screenshot_action.hpp
src/pkg/progetto_planning/launch/: lunar_mission.launch.py
src/pkg/progetto_planning/rviz/: comando_lancio_rviz.txt  lunar_mission.rviz
src/pkg/progetto_planning/src/: battery_level_check_condition.cpp  battery_simulator.cpp  bt_executor.cpp  exploration_mapper.cpp  explore_until_found.cpp  go_to_light_zone.cpp  illumination_layer.cpp  illumination_publisher.cpp  is_target_found_condition.cpp  light_zone_manager.cpp  navigate_to_goal.cpp  take_screenshot_action.cpp  target_detector.cpp
src/pkg/rover_bringup/launch/: navigation_sim.launch.py
src/pkg/rover_bringup/maps/: lunar_map.pgm  lunar_map.yaml  shadow_map.pgm  shadow_map.yaml
src/pkg/rover_bringup/params/: nav2_sim_params.yaml
src/pkg/rover_description_pkg/urdf/: rover_gazebo.xacro  rover_macro.xacro
src/pkg/rover_gazebo/launch/: rover_gazebo.launch.py
src/pkg/rover_gazebo/worlds/: lunar_world.sdf
