<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>progetto_planning</name>
  <version>0.0.0</version>
  <description>Layer custom e publisher per le zone d'ombra del rover lunare</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>nav_msgs</depend>

  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>libopencv-dev</depend>

  <depend>std_msgs</depend>

  <depend>behaviortree_cpp_v3</depend>
  <depend>nav2_msgs</depend>
  <depend>rclcpp_action</depend>

  <depend>tf2_geometry_msgs</depend>

  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


 
  
 
  
  
  
 
  